@@ -35,5 +35,5 @@ import org.restlet.Response;
  * @author Piyush Purang (ppurang@gmail.com)
  */
 public enum Dimension {
-    AUTHORIZATION, CHARACTER_SET, CLIENT_ADDRESS, CLIENT_AGENT, UNSPECIFIED, ENCODING, LANGUAGE, MEDIA_TYPE, TIME,
+    AUTHORIZATION, CHARACTER_SET, CLIENT_ADDRESS, CLIENT_AGENT, UNSPECIFIED, ENCODING, LANGUAGE, MEDIA_TYPE, TIME, ORIGIN
 }
