@@ -155,6 +155,8 @@ public final class HeaderConstants {
 
     public static final String HEADER_MAX_FORWARDS = "Max-Forwards";
 
+    public static final String HEADER_ORIGIN = "Origin";
+
     public static final String HEADER_PRAGMA = "Pragma";
 
     public static final String HEADER_PROXY_AUTHENTICATE = "Proxy-Authenticate";
@@ -196,9 +198,8 @@ public final class HeaderConstants {
     public static final String HEADER_X_FORWARDED_FOR = "X-Forwarded-For";
 
     public static final String HEADER_X_FORWARDED_PORT = "X-Forwarded-Port";
-    
+
     public static final String HEADER_X_FORWARDED_PROTO = "X-Forwarded-Proto";
-    
 
     public static final String HEADER_X_HTTP_METHOD_OVERRIDE = "X-HTTP-Method-Override";
 
